# researchmind-ai

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration_create_papers_table.py  002_create_paper_chunks_table.py  003_add_paper_fields.py  004_create_users_table.py
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py  papers.py
backend/app/api/routes/: __init__.py  auth.py  health.py  papers.py  search.py
backend/app/api/v1/routes/: health.py
backend/app/chunking/: __init__.py  base.py  exceptions.py  models.py  recursive.py  utils.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/dependencies/: __init__.py  database.py  services.py
backend/app/embeddings/: __init__.py  base.py  exceptions.py  models.py  service.py
backend/app/exceptions/: __init__.py  paper.py
backend/app/hybrid/: __init__.py  exceptions.py  service.py
backend/app/models/: __init__.py  paper.py  paper_chunk.py  user.py
backend/app/processing/: __init__.py  document_processor.py  models.py
backend/app/repositories/: base.py  chunk_repository.py  paper_repository.py
backend/app/retrieval/: __init__.py  exceptions.py  models.py  service.py
backend/app/schemas/: __init__.py  auth.py  paper.py
backend/app/services/: __init__.py  auth_service.py  chunk_persistence_service.py  indexing_service.py  paper_service.py
backend/app/storage/: __init__.py  file_storage.py  validators.py
backend/app/vectorstore/: __init__.py  exceptions.py  models.py  service.py
backend/tests/: conftest.py  test_chunk_persistence.py  test_chunking.py  test_embeddings.py  test_hybrid.py  test_papers.py  test_processing.py  test_retrieval.py  test_storage.py  test_upload.py  test_vectorstore.py
backend/tests/integration/: conftest.py  test_indexing_retrieval_pipeline.py  test_indexing_service.py
(+77 files in other folders)
