[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.0.0,<5.0.0",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.38",
    "psycopg[binary]>=3.3.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.50.2",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.11.0,<1.13.0",
    "rank-bm25>=0.2.2",
    "google-genai>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
